--- a/CustomAuthentication2/Views/Account/Register.cshtml
+++ b/CustomAuthentication2/Views/Account/Register.cshtml
@@ -44,9 +44,9 @@
 
 <h2>@ViewBag.Title.</h2>
 
-    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" ,id="loginForm" }))
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form", id = "loginForm" }))
     {
-
+        
         <span class="text-danger">@ViewBag.Error</span>
         <span>@ViewBag.Success</span>
         <h4>Create a new account.</h4>
@@ -62,8 +62,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Email, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Email, new { @class = "form-control", type = "email" })
+                @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
             </div>
+            
             
         </div>
 
